<resources>
    <string name="app_name">MusicaPromo</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="apibaseurl">http://www.musicapromo.net/wp-json/wl/v1/</string>
    <string name="destaque">Destaque</string>
    <string name="click_back_exit">Please click BACK again to exit</string>
    <string name="main_view_music_label">Latest Musics</string>
    <string name="more_label">More</string>
    <string name="recents_label">Recents</string>
    <string name="queue_label">Queue</string>
    <string name="playlists_label">Playlists</string>
    <string name="updates_labels">Updates</string>
    <string name="trending_label">Trending</string>
    <string name="lyrics_label">Lyrics</string>
    <string name="error_msg">Loading error</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_timeout">The server took too long to respond.</string>
    <string name="tap_to_reload">Tap to retry</string>
    <string name="menu_refresh">Refresh</string>

    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>

</resources>