<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@color/backgroundColor"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idSearchToolbar"
                app:titleTextColor="@color/textColor"/>

            <com.miguelcatalan.materialsearchview.MaterialSearchView
                android:id="@+id/idSearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/backgroundColor"
                android:textColorHint="@color/backgroundColor"
                />
        </RelativeLayout>
        <ScrollView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:id="@+id/idScrollbar"
            android:layout_weight="0.8"
            android:layout_below="@+id/idSearchView">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/idSearchMusicText"
                    android:textColor="@color/textColor"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_music_rv"
                    android:layout_below="@+id/idSearchMusicText"
                    >
                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/idSearchAlbumText"
                    android:textColor="@color/textColor"
                    android:layout_below="@+id/search_music_rv"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_album_rv"
                    android:layout_below="@+id/idSearchAlbumText"
                    >
                </androidx.recyclerview.widget.RecyclerView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/idSearchLyricsText"
                    android:textColor="@color/textColor"
                    android:layout_below="@+id/search_album_rv"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_local_musics_rv"
                    android:layout_below="@+id/idSearchLyricsText"
                    >
                </androidx.recyclerview.widget.RecyclerView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trending_label"
                    android:textColor="@color/textColor"
                    android:layout_below="@id/search_local_musics_rv"
                    android:paddingLeft="20dp"
                    android:id="@+id/idTrending"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/idTrending"
                    android:id="@+id/idDots"
                    />
                <androidx.viewpager.widget.ViewPager
                    android:layout_centerHorizontal="true"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/idViewPager"
                    android:layout_below="@+id/idDots"></androidx.viewpager.widget.ViewPager>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:id="@+id/idFirstRV"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/idViewPager">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_view_music_label"
                        android:textColor="@color/textColor"
                        android:layout_weight="0.75"
                        android:paddingLeft="20dp"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_label"
                        android:layout_weight="0.25"
                        android:textAlignment="center"
                        android:id="@+id/idMoreSongs"
                        android:textColor="@color/textColor"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idRVSongs"
                    android:layout_below="@id/idFirstRV"
                    android:paddingLeft="10dp">
                </androidx.recyclerview.widget.RecyclerView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:id="@+id/idSecondRV"
                    android:layout_below="@id/idRVSongs"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Albums"
                        android:textColor="@color/textColor"
                        android:layout_weight="0.75"
                        android:paddingLeft="20dp"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_label"
                        android:layout_weight="0.25"
                        android:textAlignment="center"
                        android:id="@+id/idMoreAlbums"
                        android:textColor="@color/textColor"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idRVAlbums"
                    android:layout_below="@id/idSecondRV"
                    android:paddingLeft="10dp"
                    >
                </androidx.recyclerview.widget.RecyclerView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:id="@+id/idThirdRV"
                    android:layout_below="@id/idRVAlbums"
                    android:layout_marginTop="20dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lyrics_label"
                        android:textColor="@color/textColor"
                        android:layout_weight="0.75"
                        android:paddingLeft="20dp"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_label"
                        android:layout_weight="0.25"
                        android:textAlignment="center"
                        android:id="@+id/idMoreLyrics"
                        android:textColor="@color/textColor"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idRVLocal_music"
                    android:layout_below="@id/idThirdRV"
                    android:paddingLeft="10dp">
                </androidx.recyclerview.widget.RecyclerView>
            </RelativeLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/idControlBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_weight="0.1">

            <ImageView
                android:id="@+id/id_selected_track_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0.2"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/id_selected_track_title"
                android:paddingLeft="8dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:layout_weight="0.6"/>

            <ImageView
                android:id="@+id/id_player_control"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0.2"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/idLinksLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:weightSum="3"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idRecents"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/idRecentsImage"
                    android:background="@drawable/icon_recents"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/idRecentsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recents_label"
                    android:textColor="@color/textColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idQueue"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/idQueueImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/icon_queue"/>

                <TextView
                    android:id="@+id/idQueueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/queue_label"
                    android:textColor="@color/textColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idMyPlaylists"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/idMyPlaylistsImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/icon_playlist"/>

                <TextView
                    android:id="@+id/idMyPlaylistsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlists_label"
                    android:textColor="@color/textColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idUpdates"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/idUpdatesImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/icon_updates"
                    />

                <TextView
                    android:id="@+id/idUpdatesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updates_labels"
                    android:textColor="@color/textColor"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <include layout="@layout/error_layout"/>

    <ProgressBar
        android:id="@+id/main_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</FrameLayout>

